# AI-Photonic-Design-Copilot

./: .gitignore  QUALITY_GATES.md  README.md  pyproject.toml
UniParser-Paper-Markdown/: SKILL.md
UniParser-Paper-Markdown/scripts/: fetch_by_token.py  lib_common.py  parse_paper.py
benchmarks/waveguide-bend-rt/: README.md  simulation-contract.json
curate-photonic-example-case/: CLEANING_POLICY.md  REPORT_FORMAT.md  SKILL.md  tool-manifest.yaml
curate-photonic-example-case/scripts/: curate_case.py  publish_reviewed.py  scan_sensitive.py  validate_candidate.py
example-library/: .gitignore  README.md  catalog.json
fdtd-core/: SKILL.md  tool-manifest.yaml
fdtd-core/benchmarks/: compare_cross_solver.py
fdtd-core/checklists/: requirement-intake.md  result-report.md  simulation-review.md
fdtd-core/scripts/: validate_results.py
free-design-intake/: SKILL.md  tool-manifest.yaml
lumerical-fdtd-workflow/: README.md  SKILL.md  solver-capability.yaml  tool-manifest.yaml
lumerical-fdtd-workflow/checklists/: requirement-intake.md  result-report.md  simulation-review.md
lumerical-fdtd-workflow/references/: advanced-workflows.md  convergence-validation.md  environment-units.md  modeling-api.md  monitors-run-control.md  output-diagnostics.md  sources-boundaries.md
meep-fdtd-workflow/: README.md  SKILL.md  solver-capability.yaml  tool-manifest.yaml
paper-reproduction-prep/: SKILL.md
reproduce-instructor/: SKILL.md  preferred-simulators.md  tool-manifest.yaml
schemas/: README.md
tests/: test_assets.py  test_folder_example_library.py  test_platform.py
(+38 files in other folders)
