[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-design-copilot"
version = "1.0.0"
description = "Contracts, registries, solver adapters, and quality gates for photonic simulations"
requires-python = ">=3.10"
dependencies = [
  "jsonschema",
  "numpy",
  "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
